# cc-xiaozhi

./: CMakeLists.txt  Makefile  README.md
cill/: CMakeLists.txt
cill/alsaaudio/include/: AlsaAudio.h
cill/filestream/include/: FileStream.h
cill/filestream/src/: FileStream.cc
cill/http/include/: HttpClient.h  HttpClientHelper.h
cill/http/src/: HttpClient.cc
cill/json/include/: Json.h
cill/log/include/: Log.h
cill/opus/include/: Opus.h
cill/websocket/include/: Websocket.h
xiaozhiai/: CMakeLists.txt  xiaozhiai.cc
